update for version

--- a/help.html
+++ b/help.html
@@ -44,7 +44,11 @@
     </ol>
 </p>
 <h2><a id="applimage">Application image</a></h2>
-<img src="./app-images/app-image-5-dec-2021.png" width="800" height="400" title="Application image"/>
+<h4>Game Screen</h4>
+<img src="./app-images/app-image-6-dec-2021.png" width="800" height="400" title="Application image"/>
+<br>
+<h4>Home Screen</h4>
+<img src="./app-images/app-image-home-5-dec-2021.png" width="800" height="400" title="Application image"/>
 <br>
 <a href="#top">Top</a>
 </body>
