--- a/help.html
+++ b/help.html
@@ -26,6 +26,7 @@ This game is for:
     MatchPair is a game which is freely available. It offers:
 <ol>
     <li>There are multiple levels in this game</li>
+    <li>Shows graph with tooltip</li>
     <li>In each level player need to match 3 pairs</li>
     <li>Alphabets and Numbers will be shown on screen in different colors and orders</li>
     <li>As level increases score increases</li>
