--- a/help.html
+++ b/help.html
@@ -18,37 +18,40 @@
 </ul>
 <h2><a id="introduction">Introduction</a></h2>
 This game is for:
-<ul><li><b>Selective Attention: </b> Focus on a particular object while avoiding distractions</li>
+<ul>
+    <li><b>Selective Attention: </b> Focus on a particular object while avoiding distractions</li>
     <li><b> Visual Recognition: </b> Perceiving an object's physical properties and identifying it</li>
 </ul>
 <p>This application is Java8 based. UI is designed in Swing.<br>
     No third party library is used. <br>
     MatchPair is a game which is freely available. It offers:
+</p>
 <ol>
     <li>There are multiple levels in this game</li>
     <li>Shows graph with tooltip and options to change it</li>
-    <li>User can be changed from existing list using right click menu</li>
+    <li>User can be changed from existing list using right click menu or double click</li>
     <li>In each level player need to match 3 pairs</li>
     <li>Alphabets and Numbers will be shown on screen in different colors and orders</li>
     <li>As level increases score increases</li>
     <li>On wrong match user has to play level again</li>
     <li>On game start 3 second prepare screen will appear</li>
     <li>A game is for 1 min 20 sec time limit</li>
-    <li>Settings menu is available from which</li>
-    <ol>
-        <li>User can select different colors and fonts to apply on screen</li>
-        <li>User can change font size of game</li>
-        <li>Users can see Help about game any time</li>
-    </ol>
-    <li>There are 3 tables on the screen</li>
-    <ol>
-        <li>First table shows Top-Scores of current user</li>
-        <li>Second table shows Recent-Scores of current user</li>
-        <li>Third table shows Top-Scores of all users from same machine</li>
-    </ol>
+    <li>Settings menu is available from which
+        <ol>
+            <li>User can select different colors and fonts to apply on screen</li>
+            <li>User can change font size of game</li>
+            <li>Users can see Help about game any time</li>
+        </ol>
+    </li>
+    <li>There are 3 tables on the screen
+        <ol>
+            <li>First table shows Top-Scores of current user</li>
+            <li>Second table shows Recent-Scores of current user</li>
+            <li>Third table shows Top-Scores of all users from same machine</li>
+        </ol>
+    </li>
     <li>User can Start/Stop game any time; On Stopping game scores will not count</li>
 </ol>
-</p>
 <h2><a id="applimage">Application image</a></h2>
 <h4>Game Screen</h4>
 <img src="./app-images/app-image-8-dec-2021.png" width="800" height="400" title="Application image"/>
