update for window focus

--- a/help.html
+++ b/help.html
@@ -31,6 +31,7 @@ This game is for:
     <li>Shows graph with tooltip and options to change it</li>
     <li>User can be changed from existing list using right click menu or double click</li>
     <li>User can be deleted but needs admin password which can be setup from menu</li>
+    <li>Game will be auto paused/resume on window lost/gain focus</li>
     <li>In each level player need to match 3 pairs</li>
     <li>Alphabets and Numbers will be shown on screen in different colors and orders</li>
     <li>As level increases score increases</li>
