--- a/help.html
+++ b/help.html
@@ -31,6 +31,7 @@ This game is for:
     <li>Shows graph with tooltip and options to change it</li>
     <li>User can be changed from existing list using right click menu or double click</li>
     <li>User can be deleted but needs admin password which can be setup from menu</li>
+    <li>User can be select pair types - Characters, Symbols or Smileys</li>
     <li>Game will be auto paused/resume on window lost/gain focus</li>
     <li>In each level player need to match 3 pairs</li>
     <li>Alphabets and Numbers will be shown on screen in different colors and orders</li>
@@ -55,8 +56,14 @@ This game is for:
     <li>User can Start/Stop game any time; On Stopping game scores will not count</li>
 </ol>
 <h2><a id="applimage">Application image</a></h2>
-<h4>Game Screen</h4>
-<img src="./app-images/app-image-14-dec-2021.png" width="800" height="400" title="Application image"/>
+<h4>Game Screen - Characters</h4>
+<img src="./app-images/app-image-15-dec-2021-chars.png" width="800" height="400" title="Application image"/>
+<br>
+<h4>Game Screen - Symbols</h4>
+<img src="./app-images/app-image-15-dec-2021-symbols.png" width="800" height="400" title="Application image"/>
+<br>
+<h4>Game Screen - Smileys</h4>
+<img src="./app-images/app-image-15-dec-2021-smileys.png" width="800" height="400" title="Application image"/>
 <br>
 <h4>Home Screen</h4>
 <img src="./app-images/app-image-home-8-dec-2021.png" width="800" height="400" title="Application image"/>
