update for user wise pwd

--- a/help.html
+++ b/help.html
@@ -29,6 +29,7 @@ This game is for:
 <ol>
     <li>There are multiple levels in this game</li>
     <li>Shows graph with tooltip and options to change it</li>
+    <li>Each user will have its own password</li>
     <li>User can be changed from existing list using right click menu or double click</li>
     <li>User can be deleted but needs admin password which can be setup from menu</li>
     <li>User can be select pair types - Characters, Symbols or Smileys</li>
